--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
   "env": {
     "NODE_ENV": "prod",
     "PORT": "5000",
-    "API_BASE_URL": "@ADMIN_URL",
+    "API_BASE_URL": "@API_BASE_URL",
     "MONGO_URI": "@MONGODB_URI",
     "JWT_SECRET": "@JWT_SECRET"
   }
