--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     }
   ],
   "env": {
-    "NODE_ENV": "prod",
+    "NODE_ENV": "production",
     "PORT": "5000",
     "API_BASE_URL": "@API_BASE_URL",
     "MONGO_URI": "@MONGODB_URI",
