--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
   "env": {
     "NODE_ENV": "production",
     "PORT": "5000",
-    "MONGO_URI": "@MONGO_URI",
+    "MONGODB_URI": "@MONGODB_URI",
     "JWT_SECRET": "@JWT_SECRET"
   }
 }
