--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,6 @@
   "env": {
     "NODE_ENV": "production",
     "PORT": "5000",
-    "MONGODB_URI": "@MONGODB_URI",
-    "JWT_SECRET": "@JWT_SECRET"
+    "MONGODB_URI": "@MONGODB_URI"
   }
 }
