--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "build": [
+  "builds": [
     {
       "src": "server.js",
       "use": "@vercel/node"
