--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/Rami2212/Perks-Marketplace-Backend#readme",
   "dependencies": {
+    "@google-analytics/data": "^5.2.1",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.8.0",
     "compression": "^1.8.1",
@@ -32,6 +34,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.3.0",
+    "gtag": "^1.0.1",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
@@ -43,7 +46,8 @@
     "nodemailer": "^7.0.10",
     "path-to-regexp": "^8.3.0",
     "rate-limit-mongo": "^2.3.2",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
