--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-validator": "^7.3.0",
     "gtag": "^1.0.1",
     "helmet": "^8.1.0",
+    "install": "^0.13.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -44,10 +45,11 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
+    "npm": "^11.6.2",
     "path-to-regexp": "^8.3.0",
     "rate-limit-mongo": "^2.3.2",
     "slugify": "^1.6.6",
-    "uuid": "^13.0.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
